--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     <!-- App -->
     <link rel="stylesheet" type="text/css" href="index.css" />
     <script type="text/javascript" src="app.config.js"></script>
+    <script type="text/javascript" src="global.js"></script>
     <script type="text/javascript" src="index.js"></script>
 
     <!-- Layouts -->
@@ -87,6 +88,12 @@
     <link rel="dx-template" type="text/html" href="layouts/Simple/SimpleLayout.html"/>
 
     <!-- App views -->
+    <!--HOME REGISTER-->
+    <script type="text/javascript" src="views/home_register.js"></script>
+    <link rel="dx-template" type="text/html" href="views/home_register.html"/>
+    <!--HOME UNACTIVE-->
+    <script type="text/javascript" src="views/home_unactive.js"></script>
+    <link rel="dx-template" type="text/html" href="views/home_unactive.html"/>
     <!--HOME-->
     <script type="text/javascript" src="views/home.js"></script>
     <link rel="dx-template" type="text/html" href="views/home.html"/>
