--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <script type="text/javascript" src="PushAndroid.js"></script>
     <script type="text/javascript" src="PushIOS.js"></script>
+    <script type="text/javascript" src="PushWooshIOS.js"></script>
 
     <script type="text/javascript">
         dev_log('end load cordova and Pushwoosh');
