--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
     </script>
 
-    <script src="http://192.168.0.103:8080/target/target-script-min.js"></script>
+    <!--<script src="http://192.168.0.103:8080/target/target-script-min.js"></script>-->
 
     <script type="text/javascript">
         dev_log('end init weinre');
@@ -30,6 +30,7 @@
     <script type="text/javascript" src="PushAndroid.js"></script>
     <script type="text/javascript" src="PushIOS.js"></script>
     <script type="text/javascript" src="PushWooshIOS.js"></script>
+    <script type="text/javascript" src="PushWooshAndroid.js"></script>
 
     <script type="text/javascript">
         dev_log('end load cordova and Pushwoosh');
