--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
         <!--DETAIL BALANCE-->
         <script type="text/javascript" src="views/detail_balance.js"></script>
         <link rel="dx-template" type="text/html" href="views/detail_balance.html"/>
+        <!--SET PURSE-->
+        <script type="text/javascript" src="views/set_purse.js"></script>
+        <link rel="dx-template" type="text/html" href="views/set_purse.html"/>
+        <!--CASHOUT-->
+        <script type="text/javascript" src="views/cashout.js"></script>
+        <link rel="dx-template" type="text/html" href="views/cashout.html"/>
         
         </head>
         <body>
