change version to 0.0.9 - need to update block, phone validation etc.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         <script type="text/javascript" src="js/localization/globalize.culture.ru.js"></script>
         <script type="text/javascript" src="js/localization/localization.default.js"></script>
         <script type="text/javascript" src="js/localization/localization.ru.js"></script>
-        
-        
+        <script type="text/javascript" src="js/jquery.inputmask.bundle.min.js"></script>
+
+
         <link rel="stylesheet" type="text/css" href="css/dx.common.css" />
         <link rel="stylesheet" type="text/css" href="css/dx.spa.css" />
         <link rel="dx-theme" data-theme="android.holo-light" href="css/dx.android.holo-light.css" data-active="false" />
