ability to send photos

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         <!--CASHOUT-->
         <script type="text/javascript" src="views/cashout.js"></script>
         <link rel="dx-template" type="text/html" href="views/cashout.html"/>
+        <!--SEND_PHOTO-->
+        <script type="text/javascript" src="views/send_photo.js"></script>
+        <link rel="dx-template" type="text/html" href="views/send_photo.html"/>
         
         </head>
         <body>
