add pay button for rent-drivers

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         <!--SEND_PHOTO-->
         <script type="text/javascript" src="views/send_photo.js"></script>
         <link rel="dx-template" type="text/html" href="views/send_photo.html"/>
+        <!--RENT_PAY-->
+        <script type="text/javascript" src="views/rent_pay.js"></script>
+        <link rel="dx-template" type="text/html" href="views/rent_pay.html"/>
         
         </head>
         <body>
