add card payment

--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         <!--SET PURSE-->
         <script type="text/javascript" src="views/set_purse.js"></script>
         <link rel="dx-template" type="text/html" href="views/set_purse.html"/>
+        <!--SET CARD-->
+        <script type="text/javascript" src="views/set_card.js"></script>
+        <link rel="dx-template" type="text/html" href="views/set_card.html"/>
         <!--CASHOUT-->
         <script type="text/javascript" src="views/cashout.js"></script>
         <link rel="dx-template" type="text/html" href="views/cashout.html"/>
