--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          <script type="text/javascript" src="js/dx.phonejs.js"></script>
          
          <link rel="stylesheet" type="text/css" href="index.css" />
-         <script type="text/javascript" src="app.config.js"></script>
+        <!-- <script type="text/javascript" src="app.config.js"></script> -->
          <script type="text/javascript" src="global.js"></script>
          <script type="text/javascript" src="index.js"></script>
          
